--- a/public/style.css
+++ b/public/style.css
@@ -1,37 +1,87 @@
 body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-  }
-  
-  .section {
-    margin-bottom: 2em;
-  }
-  
-  textarea {
-    width: 80%;
-    height: 150px;
-    margin: 1em auto;
-    padding: 0.5em;
-  }
-  
-  button {
-    background-color: #007BFF;
-    color: white;
-    border: none;
-    padding: 0.5em 1em;
-    margin: 1em;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
-  #display-area {
-    width: 80%;
-    height: 150px;
-    margin: 1em auto;
-    padding: 0.5em;
-    border: 1px solid #ccc;
-  }
-  
+  font-family: Arial, sans-serif;
+  text-align: left; /* Aligns everything to the left */
+  background-color: #222222;  /* dark grey */
+  color: #ffffff;  /* white */
+  padding: 0 10%; /* Add some padding to the body to better center the content */
+}
+
+.section {
+  margin-bottom: 2em;
+}
+
+textarea {
+  width: 100%;
+  height: 50px;
+  padding: 0.5em;
+  font-size: x-large;
+  background-color: #333333;  /* darker grey */
+  color: #ffffff;  /* white */
+  border-radius: 5px;
+}
+
+button {
+  display: block; /* To make the button take full width */
+  background-color: #444444;  /* even darker grey */
+  color: #ffffff;  /* white */
+  border: none;
+  padding: 0.5em 1em;
+  cursor: pointer;
+  font-size: large;
+  font-weight: bold;
+  border-radius: 5px;
+  margin-bottom: 1em; /* Add some margin to separate the buttons from the tables */
+}
+
+#fetch-spanish-btn {
+  background-color: green;
+}
+#fetch-english-btn {
+  background-color: green;
+}
+#upload-btn {
+  background-color: blue;
+}
+
+button:hover {
+  background-color: #555555;  /* slightly darker on hover */
+}
+
+#display-area {
+  width: 80%;
+  height: 150px;
+  margin: 1em auto;
+  padding: 0.5em;
+  border: 1px solid #ccc;
+  background-color: #333333;  /* darker grey */
+  color: #ffffff;  /* white */
+}
+
+table {
+  width: 100%;
+  margin: .5em auto;
+  border-collapse: collapse;
+  background-color: #444444;  /* darker grey */
+  color: #ffffff;  /* white */
+  border: 1px solid #666;  /* slightly lighter grey */
+  border-radius: 10px;  /* add a subtle roundness to the table */
+  overflow: hidden;  /* hides the square edges of th and td elements */
+}
+
+th, td {
+  padding: 0.5em;
+  border: 1px solid #666;  /* slightly lighter grey */
+  text-align: left;
+  background-color: #555555;  /* even darker grey */
+  color: #ffffff;  /* white */
+  font-size: large;
+}
+
+th {
+  background-color: #333333;  /* slightly lighter grey */
+}
+
+/* on hover clear tables should be red */
+#clear-tables:hover {
+  background-color: red;
+}
