--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@ body {
 textarea {
   width: 100%;
   height: 50px;
-  padding: 0.5em;
+  padding: .5em;
   font-size: x-large;
   background-color: #333333;  /* darker grey */
   color: #ffffff;  /* white */
@@ -81,7 +81,11 @@ th {
   background-color: #333333;  /* slightly lighter grey */
 }
 
-/* on hover clear tables should be red */
-#clear-tables:hover {
-  background-color: red;
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content:first baseline;
+  gap: 1em;
+  align-items: baseline;
+  
 }
